--- a/src/components/header/style.css
+++ b/src/components/header/style.css
@@ -1,4 +1,4 @@
-.header {
+/* .header {
 	position: fixed;
 	left: 0;
 	top: 0;
@@ -45,4 +45,4 @@
 
 .header nav a.active {
 	background: rgba(0,0,0,0.4);
-}
+} */
