--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,20 +1,993 @@
-html, body {
-	height: 100%;
-	width: 100%;
-	padding: 0;
-	margin: 0;
-	background: #FAFAFA;
-	font-family: 'Helvetica Neue', arial, sans-serif;
-	font-weight: 400;
-	color: #444;
-	-webkit-font-smoothing: antialiased;
-	-moz-osx-font-smoothing: grayscale;
-}
+@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital@0;1&display=swap");
 
 * {
-	box-sizing: border-box;
+  -moz-box-sizing: border-box;
+  -webkit-box-sizing: border-box;
+  box-sizing: border-box;
+  scrollbar-width: thin;
+  scrollbar-color: rgb(var(--alt)) transparent;
 }
 
-#app {
-	height: 100%;
+*::-webkit-scrollbar {
+  width: 12px;
+}
+*::-webkit-scrollbar-track {
+  background: transparent;
+}
+*::-webkit-scrollbar-thumb {
+  border-radius: 0;
+  background-color: rgb(var(--alt));
+  border: 2px solid transparent;
+}
+
+:root {
+  --main: 255, 170, 60;
+  --alt: 120, 75, 20;
+  --black: #12100d;
+}
+
+::selection {
+  background-color: rgba(var(--alt), 0.7);
+  color: rgb(var(--main));
+}
+
+body {
+  background: black;
+  color: rgb(var(--main));
+  font-family: "Roboto Mono", monospace;
+  display: grid;
+  align-content: center;
+  position: fixed;
+  margin: 0;
+  top: 0;
+  left: 0;
+  width: 100%;
+  height: 100%;
+  font-size: 15px;
+}
+
+h1,
+h2,
+h3,
+h4,
+h5,
+h6 {
+  margin: 0;
+}
+
+b, strong {
+  font-weight: normal;
+}
+
+.noclick {
+  pointer-events: none;
+}
+
+.piece {
+  display: block;
+  height: 100%;
+  left: 0;
+  top: 0;
+  width: 100%;
+}
+
+.frame {
+  background-color: transparent;
+  border-radius: 30px;
+  border: 20px solid;
+  border-bottom-color: #0f0e0d;
+  border-left-color: #080807;
+  border-right-color: #080807;
+  border-top-color: #020202;
+  box-shadow: inset 0 0 24rem black, inset 0 0 5rem black, 0 0 16rem black;
+  pointer-events: none;
+  max-width: 900px;
+  height: 550px;
+  width: 96%;
+  max-height: calc(100vh - 20px);
+  margin: 0 auto;
+  overflow: hidden;
+  position: relative;
+  min-height: 350px;
+}
+
+.output {
+  -webkit-animation: crt-output 10ms infinite;
+  animation: crt-output 10ms infinite;
+  background-color: var(--black);
+  position: absolute;
+  padding: 30px;
+  pointer-events: auto;
+  text-shadow: 0rem 0.2rem 1rem currentColor;
+  z-index: -1;
+}
+.frame * {
+  cursor: none !important;
+  font-weight: normal;
+}
+
+@-webkit-keyframes crt-output {
+  0% {
+    opacity: 0.9;
+  }
+  50% {
+    opacity: 1;
+  }
+}
+@keyframes crt-output {
+  0% {
+    opacity: 0.9;
+  }
+  50% {
+    opacity: 1;
+  }
+}
+
+.scanlines {
+  background: -webkit-gradient(
+    linear,
+    left top,
+    left bottom,
+    from(rgba(255, 255, 255, 0)),
+    color-stop(50%, rgba(255, 255, 255, 0)),
+    color-stop(70%, rgba(0, 0, 0, 0.2)),
+    to(rgba(0, 0, 0, 0.6))
+  );
+  background: linear-gradient(
+    to bottom,
+    rgba(255, 255, 255, 0),
+    rgba(255, 255, 255, 0) 50%,
+    rgba(0, 0, 0, 0.2) 70%,
+    rgba(0, 0, 0, 0.6)
+  );
+  background-size: 100% 0.5rem;
+  border-radius: 30px;
+  position: absolute;
+  z-index: 0;
+}
+
+.glow {
+  -webkit-animation: crt-glow 60s infinite;
+  animation: crt-glow 60s infinite;
+  background: radial-gradient(
+    circle at center,
+    rgb(var(--main)) 0%,
+    rgba(var(--alt), 0.78) 58%,
+    rgba(var(--alt), 0.55) 80%,
+    rgba(var(--alt), 0.27) 93%,
+    rgba(var(--alt), 0) 100%
+  );
+  opacity: 0.15;
+  pointer-events: none;
+  position: fixed;
+  z-index: 2;
+}
+@-webkit-keyframes crt-glow {
+  0% {
+    opacity: 0.1;
+  }
+  50% {
+    opacity: 0.2;
+  }
+}
+@keyframes crt-glow {
+  0% {
+    opacity: 0.1;
+  }
+  50% {
+    opacity: 0.2;
+  }
+}
+
+.pipboy {
+  border: 3px solid rgb(var(--main));
+  border-width: 2px 0;
+  position: relative;
+  height: 100%;
+  padding: 16px;
+  z-index: 1;
+}
+
+.pipboy::before,
+.pipboy::after {
+  position: absolute;
+  content: "";
+  width: 2px;
+  height: 100%;
+  background: linear-gradient(
+    to bottom,
+    rgb(var(--main)) 0%,
+    rgba(0, 0, 0, 0) 35%,
+    rgba(0, 0, 0, 0) 65%,
+    rgb(var(--main)) 100%
+  );
+  top: 0;
+}
+
+.pipboy::before {
+  left: 0;
+}
+.pipboy::after {
+  right: 0;
+}
+
+.pip-title {
+  font-size: 22px;
+  background: none;
+  border: none;
+  color: rgb(var(--main));
+  position: absolute;
+  padding: 0 5px;
+  text-transform: uppercase;
+  top: -15px;
+  left: 40px;
+  z-index: 2;
+  letter-spacing: 0.1em;
+}
+
+.pip-title::after {
+  background: #111;
+  content: "";
+  height: 3px;
+  width: 100%;
+  left: 0;
+  top: 13px;
+  position: absolute;
+  z-index: -1;
+}
+
+.pip-head {
+  position: absolute;
+  top: 0;
+  right: 0;
+  width: max-content;
+  max-width: 100%;
+  text-align: right;
+  background: linear-gradient(
+    to bottom,
+    var(--black) 0%,
+    rgba(0, 0, 0, 0) 100%);
+  z-index: 1;
+}
+
+.pip-head li {
+  float: left;
+  margin-left: 10px;
+  padding: 5px 10px;
+  min-width: 120px;
+  position: relative;
+}
+.pip-head li::before {
+  content: "";
+  position: absolute;
+  background: var(--black);
+  width: 10px;
+  height: 2px;
+  top: -2px;
+  left: -10px;
+}
+.pip-head li::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 100%;
+  width: 2px;
+  background: linear-gradient(
+    to bottom,
+    rgb(var(--main)) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
+}
+
+.pip-head li b {
+  float: left;
+  margin-right: 1em;
+}
+
+.pipboy a {
+  color: inherit;
+  text-decoration: none;
+}
+
+.pipboy ul {
+  margin: 0;
+  padding: 0;
+  list-style: none;
+}
+
+.pipboy > .tab-content {
+  line-height: 1.2em;
+  overflow-y: hidden;
+  overflow-x: hidden;
+  display: block;
+  height: 100%;
+  padding-right: 1px;
+}
+
+.pipboy > .tab-content > .tab-pane {
+  padding-left: 30px;
+  height: 100%;
+  overflow-y: auto;
+}
+
+#items, #stats {
+  margin-top: 15px;
+}
+
+#stats.tab-pane {
+  padding-left: 2px;
+}
+
+.pip-body {
+  position: relative;
+  z-index: 0;
+}
+
+label {
+  cursor: pointer;
+}
+
+.options {
+  display: block;
+  width: 300px;
+  max-width: 32%;
+  position: fixed; 
+}
+
+.colors {
+  display: grid;
+  grid-template-columns: 33.33% 33.33% 33.33%;
+}
+
+.colors label {
+  outline: 1px solid rgb(var(--main));
+  padding: 5px;
+  text-align: center;
+  transition: all 0.1s ease;
+  margin: 5px;
+}
+
+.options input,
+.colors input {
+  position: absolute;
+  width: 0;
+  height: 0;
+  opacity: 0;
+  pointer-events: none;
+  left: 0;
+  top: 0;
+}
+
+.options label, .options a {
+  display: block;
+  padding: 5px 5px 5px 25px;
+  margin: 5px 0 0 -25px;
+  position: relative;
+  outline: 0.5px solid transparent;
+  width: 100%;
+}
+
+.options .active a {
+  outline: 0px solid transparent;
+}
+
+.frame label:hover, .options a:hover,
+.frame label:focus {
+  outline: 2px solid currentColor;
+  background: rgba(var(--alt), 0.25);
+}
+
+.colors input:checked + label {
+  color: var(--black);
+  background: rgb(var(--main), 0.8);
+}
+
+.options label::before, .options a::before {
+  content: "";
+  position: absolute;
+  width: 10px;
+  height: 10px;
+  left: 8px;
+  top: 9px;
+  outline: 1.5px solid transparent;
+}
+
+.options label:hover::before, .options a:hover::before {
+  outline-color: currentColor;
+}
+
+.options input:checked + label::before, .options .active a::before {
+  background: currentColor;
+  outline-color: currentColor;
+}
+
+.pip-foot {
+  display: block;
+  position: absolute;
+  bottom: -14px;
+  width: calc(100% - 60px);
+  left: 30px;
+  z-index: 0;
+}
+
+.pip-foot li {
+  display: contents;
+}
+
+.pip-foot a {
+  border-radius: 0;
+  display: block;
+  float: left;
+  width: 12%;
+  height: 28px;
+  margin: 0 4%;
+  text-align: center;
+  position: relative;
+  line-height: 25px;
+}
+.pip-foot a::after {
+  content: "";
+  position: absolute;
+  background: var(--black);
+  width: 100%;
+  height: 2px;
+  left: 0;
+  bottom: 12px;
+  z-index: -1;
+}
+
+a:focus {
+  outline: 1px solid;
+  outline-offset: -1px;
+}
+
+a,
+label,
+label::before {
+  transition: all 0.1s;
+  outline: 0.5px solid transparent;
+}
+
+a:hover,
+a.active,
+li.active a {
+  outline: 2px solid currentColor;
+}
+a:hover {
+  background: rgba(var(--alt), 0.25);
+}
+
+.pipboy .side-menu {
+  width: 60px;
+  position: fixed;
+}
+
+.side-menu a {
+  display: block;
+  width: 60px;
+  line-height: 25px;
+  padding: 0 10px 2px 10px;
+  margin: 6px 0;
+}
+
+.stats-page {
+  display: block;
+  width: calc(100% - 80px);
+  float: right;
+  position: relative;
+  padding-right: 10px;
+}
+
+.stats-page h4 {
+  border-bottom: 2px solid rgba(var(--main),0.25);
+  margin: 10px 0 0 0;
+  padding-bottom: 10px;
+  text-transform: uppercase;
+}
+
+.stats-page li {
+  padding: 10px 0;
+  border-bottom: 2px solid rgba(var(--main),0.25);
+}
+
+.stats-page .right-options {
+  position: absolute;
+  right: 0;
+  top: 50px;
+  max-width: max-content;
+}
+
+.right-options {
+  display: block;
+  float: right;
+  padding-right: 1px;
+  max-width: 33%;
+  white-space: nowrap;
+}
+
+#items .right-options {
+  margin-bottom: 100px;
+}
+
+.right-options a {
+  display: block;
+  text-align: right;
+  padding: 5px;
+  margin-bottom: 5px;
+}
+
+.right-options a::after {
+  content: "»";
+  padding-left: 5px;
+}
+
+.frame .disabled {
+  color: rgb(var(--alt));
+  pointer-events: none;
+}
+
+.frame button {
+  -webkit-appearance: none;
+  appearance: none;
+  background: transparent;
+  color: rgb(var(--main));
+  border: 1px solid rgb(var(--main));
+  padding: 3px 10px;
+  transition: all 0.1s ease;
+}
+
+.frame button:hover,
+.frame button:focus {
+  background: rgba(var(--alt), 0.25);
+  outline: 1px solid;
+}
+
+.info {
+  width: 60%;
+  float: right;
+  padding-top: 10px;
+}
+
+.info-table {
+  margin-top: 100px;
+}
+
+.info-table li {
+  float: left;
+  margin-left: 1.3%;
+  margin-bottom: 3px;
+  padding: 4px 6px;
+  width: 32%;
+  position: relative;
+  border-top: 2px solid;
+  text-align: right;
+}
+
+.info-table li b {
+  float: left;
+  margin-right: 6px;
+}
+
+.info-table li.clear {
+  clear: left;
+}
+
+.info-table li.span-2,
+.info-table .vboy-wrap {
+  width: 65.4%;
+  text-align: left;
+}
+
+.condition {
+  display: block;
+  background: rgba(var(--alt),0.25);
+  float: right;
+  height: 1em;
+  width: 70px;
+  max-width: calc(100% - 35px);
+  margin: 2px 2px 0 -5px;
+  position: relative;
+}
+.condition .fill {
+  display: block;
+  position: absolute;
+  left: 0;
+  top: 0;
+  height: 100%;
+  background: rgb(var(--main));
+}
+
+.condition::after {
+  content: "";
+  position: absolute;
+  right: 23%;
+  height: 100%;
+  top: 0;
+  width: 2px;
+  background: linear-gradient(
+    to bottom,
+    var(--black) 0%,
+    rgba(0, 0, 0, 0) 40%,
+    rgba(0, 0, 0, 0) 60%,
+    var(--black) 100%
+  );
+}
+
+.extra {
+  border-top: 2px solid;
+  float: left;
+  clear: both;
+  width: 98.7%;
+  position: relative;
+  padding: 5px 6px;
+  margin: 0 0 0 1.3%;
+  padding-left: 34.6%;
+}
+
+.extra b {
+  position: absolute;
+  left: 6px;
+}
+
+.info-table li::after,
+.extra::after {
+  content: "";
+  position: absolute;
+  right: 0;
+  top: 0;
+  height: 100%;
+  width: 2px;
+  background: linear-gradient(
+    to bottom,
+    rgb(var(--main)) 0%,
+    rgba(0, 0, 0, 0) 100%
+  );
+}
+
+.info-table .vboy-wrap {
+  border: none;
+}
+.info-table .vboy-wrap::after {
+  display: none;
+}
+
+.vboy {
+  height: 180px;
+  pointer-events: none;
+  background-image: url("https://cybersandbox.ca/resources/vaultboy-tp.gif");
+  background-position: 60% center;
+  background-repeat: no-repeat;
+  -webkit-filter: hue-rotate(-52deg) saturate(0.9);
+  filter: hue-rotate(-52deg) saturate(0.9);
+}
+
+.item-icon {
+  position: absolute;
+  bottom: 4px;
+  left: 0;
+}
+
+.icon {
+  float: left;
+  width: 40px;
+  height: 40px;
+  margin-top: -20px;
+  margin-right: 7px;
+  border: 2px solid;
+  object-fit: contain;
+}
+
+.icon img {
+  max-width: 100%;
+  max-height: 100%;
+}
+
+.post {
+  line-height: 1.5em;
+  padding-right: 20px;
+  font-size: 14px;
+}
+
+.cursor {
+  position: absolute;
+  z-index: -1;
+  pointer-events: none;
+}
+
+.cursor::before {
+  content: "";
+  display: block;
+  width: 20px;
+  height: 25px;
+  background-size: contain;
+  background-repeat: no-repeat;
+}
+
+.cursor.cursor-hidden::before {
+  background-image: unset;
+}
+
+.cursor.cursor-default::before {
+  background-image: url("https://cybersandbox.ca/resources/nv-cursor.png");
+  -webkit-filter: brightness(0.8);
+  filter: brightness(0.8);
+}
+
+.cursor.cursor-input::before {
+  background-image: url("https://cybersandbox.ca/resources/nv-cur-text.png");
+  -webkit-filter: brightness(0.8);
+  filter: brightness(0.8);
+}
+
+.cursor.cursor-active::before {
+  background-image: url("https://cybersandbox.ca/resources/nv-cursor.png");
+  -webkit-filter: brightness(1.15) saturate(1.15);
+  filter: brightness(1.15) saturate(1.15);
+}
+
+.fade-a {
+  animation: fade-swap 8s infinite;
+  animation-delay: -4s;
+  opaicty: 1;
+}
+
+.fade-b {
+  position: absolute;
+  left: 0;
+  width: 100%;
+  padding: 0 6px;
+  opacity: 0;
+  animation: fade-swap 8s infinite;
+}
+
+.pip-head .fade-b {
+  padding: 0 10px;
+}
+
+@keyframes fade-swap {
+  0% {
+    opacity: 0;
+    color: rgb(var(--alt));
+  }
+  20% {
+    opacity: 0;
+    color: rgb(var(--alt));
+  }
+  30% {
+    opacity: 1;
+    color: rgb(var(--main));
+  }
+  65% {
+    opacity: 1;
+    color: rgb(var(--main));
+  }
+  75% {
+    opacity: 0;
+    color: rgb(var(--alt));
+  }
+  100% {
+    opacity: 0;
+    color: rgb(var(--alt));
+  }
+}
+
+@media only screen and (max-width: 800px) {
+  .frame {
+    height: 100vh;
+    width: 100%;
+    max-height: unset;
+    border: none;
+  }
+  
+  .output {
+    padding: 25px 15px 30px 15px;
+  }
+  
+  .pipboy {
+    padding-bottom: 20px;
+  }
+  
+  #items, #stats {
+    margin-top: 55px;
+    padding-top: 15px;
+  }
+  .pip-head {
+    width: 100%;
+    background: transparent;
+  } 
+  .pip-head li {
+    width: calc(50% - 10px);
+    border-top: 2px solid;
+    margin-bottom: 10px;
+    margin-top: -2px;
+    padding-top: 10px;
+  }
+  .pip-head li:not(:nth-of-type(2))::before {
+    display: none;
+  }
+  .pip-body .options {
+    width: 100%;
+    max-width: unset;
+    position: relative;
+  }
+  .pip-body {
+    position: relative;
+  }
+  .pip-body .info {
+    width: calc(100% + 30px);
+    margin-left: -30px;
+    margin-top: 10px;
+    position: relative;
+    padding-bottom: 10px;
+    float: none;
+    height: 100%;
+  }
+  .pip-body .info::after,
+  .pip-head::after {
+    content: "";
+    position: absolute;
+    left: 0;
+    top: 0;
+    height: 2px;
+    width: 100%;
+    background: linear-gradient(
+      to right,
+      rgba(0, 0, 0, 0) 0%,
+      rgb(var(--main)) 35%,
+      rgb(var(--main)) 65%,
+      rgba(0, 0, 0, 0) 100%
+    );
+  }
+  
+  .options label, .options a {
+    width: calc(100% + 24px);
+    max-width: unset;
+  }
+  
+  .pip-head::after {
+    top: unset;
+    bottom: 5px;
+  }
+  
+  .stats-page {
+    padding: 0;
+  }
+  
+  .post {
+    padding: 10px;
+  }
+
+  .pipboy .pip-foot {
+    bottom: -18px;
+    width: 98%;
+    margin: 0 1%;
+    left: 0;
+  }
+
+  .pip-foot a {
+    width: 16%;
+    height: 35px;
+    margin: 0 2%;
+    line-height: 32px;
+    overflow: hidden;
+    font-size: 0.85em;
+  }
+  .pip-foot a::after {
+    bottom: 16px;
+  }
+  .cursor.cursor-active::before {
+    background-image: url("https://cybersandbox.ca/resources/nv-cursor.png");
+    -webkit-filter: brightness(1);
+    filter: brightness(1);
+  }
+}
+
+html.amber {
+  --main: 255,170,60;
+  --alt: 120,75,20;
+}
+
+.white .filter,
+.white .cursor {
+  filter: saturate(0) brightness(1.15);
+}
+html.white { 
+  --main: 245,245,245;
+  --alt: 130,130,130;
+}
+
+.red .filter,
+.red .cursor {
+  filter: sepia(1) saturate(7) brightness(0.65) hue-rotate(-35deg);
+}
+html.red { 
+  --main: 255,40,0;
+  --alt: 160,20,0;
+}
+
+.green .filter,
+.green .cursor {
+  filter: sepia(1) saturate(5) brightness(0.85) hue-rotate(65deg);
+}
+html.green { 
+  --main: 0,230,50;
+  --alt: 0,160,30;
+}
+
+.blue .filter,
+.blue .cursor {
+  filter: sepia(1) saturate(5) hue-rotate(165deg); 
+}
+html.blue { 
+  --main: 50,150,255;
+  --alt: 20,80,160;
+}
+
+.black .filter,
+.black .cursor {
+  filter: sepia(1) invert(1); 
+}
+html.black { 
+  --main: 200,220,250;
+  --alt: 90,100,150;
+}
+
+.piece::before,
+.piece::after {
+  display: block;
+  position: absolute;
+  top: 50%;
+  left: 0;
+  width: 100%;
+  height: 0%;
+  background-size: cover;
+  background-position: center;
+  background-repeat: no-repeat;
+  pointer-events: none;
+  opacity: 0;
+  transition: all 0.5s ease-in-out;
+}
+
+.black .piece::before {
+  background-image: url('https://cybersandbox.ca/wp-content/uploads/2021/11/the-eye.gif');
+  background-size: 110vmax auto;
+  opacity: 0.8;
+  height: 100%;
+  top: 0;
+  background-color: #2f3748;
+  filter: sepia(1) hue-rotate(170deg);
+}
+
+.black .piece::after {
+  background-image: url('https://cybersandbox.ca/wp-content/uploads/2021/11/b-noise.gif');
+  opacity: 0.2;
+  height: 100%;
+  top: 0;
+}
+
+@media only screen and (min-width: 1310px) {
+  .black .piece::before {
+  background-size: 1300px auto;
+  }
+}
+
+@media only screen and (max-width: 767px) {
+  .piece::before,
+  .piece::after {
+    top: 0;
+    left: 50%;
+    width: 0;
+    height: 100%;
+  }
+  .black .piece::before {
+  background-size: cover;
+    width: 100%;
+    left: 0;
+  }
+  .black .piece::after {
+  background-size: cover;
+    width: 100%;
+    left: 0;
+  }
 }
