Minor refactor and fixes

--- a/src/style/index.css
+++ b/src/style/index.css
@@ -31,7 +31,7 @@
   color: rgb(var(--main));
 }
 
-body {
+.bbody {
   background: black;
   color: rgb(var(--main));
   font-family: "Roboto Mono", monospace;
