--- a/src/style/index.css
+++ b/src/style/index.css
@@ -76,10 +76,18 @@ b, strong {
   background-color: transparent;
   border-radius: 30px;
   border: 20px solid;
-  border-bottom-color: #0f0e0d;
+  border-bottom-color:rgba(22, 23, 24,.9);
+  border-left-color: rgba(22, 23, 24,.6);
+  border-right-color: rgba(22, 23, 24,.8);
+  border-top-color: rgba(22, 23, 24,.4);
+  /* border-bottom-color: #212529;
+  border-left-color: rgba(22, 23, 24,1);
+  border-right-color: #41464b;
+  border-top-color: #161718; */
+  /* border-bottom-color: #0f0e0d;
   border-left-color: #080807;
   border-right-color: #080807;
-  border-top-color: #020202;
+  border-top-color: #020202; */
   box-shadow: inset 0 0 24rem black, inset 0 0 5rem black, 0 0 16rem black;
   pointer-events: none;
   max-width: 900px;
@@ -952,6 +960,7 @@ html.black {
 }
 
 .black .piece::before {
+  content: '';
   background-image: url('https://cybersandbox.ca/wp-content/uploads/2021/11/the-eye.gif');
   background-size: 110vmax auto;
   opacity: 0.8;
@@ -962,8 +971,9 @@ html.black {
 }
 
 .black .piece::after {
+  content: '';
   background-image: url('https://cybersandbox.ca/wp-content/uploads/2021/11/b-noise.gif');
-  opacity: 0.2;
+  opacity: 0.05;
   height: 100%;
   top: 0;
 }
