--- a/src/style/index.css
+++ b/src/style/index.css
@@ -468,21 +468,22 @@ a:hover {
 }
 
 .pipboy .side-menu {
-  width: 60px;
+  width: 80px;
   position: fixed;
 }
 
 .side-menu a {
   display: block;
-  width: 60px;
+  width: 80px;
   line-height: 25px;
   padding: 0 10px 2px 10px;
   margin: 6px 0;
+  text-align: center;
 }
 
 .stats-page {
   display: block;
-  width: calc(100% - 80px);
+  width: calc(100% - 100px);
   float: right;
   position: relative;
   padding-right: 10px;
