--- a/src/style/index.css
+++ b/src/style/index.css
@@ -489,11 +489,12 @@ a:hover {
   padding-right: 10px;
 }
 
-.stats-page h4 {
+.underlined-title{
   border-bottom: 2px solid rgba(var(--main),0.25);
   margin: 10px 0 0 0;
   padding-bottom: 10px;
   text-transform: uppercase;
+  width: 98%;
 }
 
 .stats-page li {
