--- a/src/components/snake-game/style.css
+++ b/src/components/snake-game/style.css
@@ -94,7 +94,8 @@
 .wrapper {
   display: flex;
   flex-flow: row wrap;
-  justify-content: center;
-  align-items: center;
+  justify-content: space-evenly;
+  align-items: start;
+  width: 100%;
   margin-bottom: 20px;
 }
