--- a/src/style/index.css
+++ b/src/style/index.css
@@ -11,9 +11,11 @@
 *::-webkit-scrollbar {
   width: 12px;
 }
+
 *::-webkit-scrollbar-track {
   background: transparent;
 }
+
 *::-webkit-scrollbar-thumb {
   border-radius: 0;
   background-color: rgb(var(--alt));
@@ -44,7 +46,7 @@
   width: 100%;
   height: 100%;
   font-size: 15px;
-  cursor:none;
+  cursor: none;
 }
 
 h1,
@@ -56,7 +58,8 @@ h6 {
   margin: 0;
 }
 
-b, strong {
+b,
+strong {
   font-weight: normal;
 }
 
@@ -76,10 +79,10 @@ b, strong {
   background-color: transparent;
   border-radius: 30px;
   border: 20px solid;
-  border-bottom-color:rgba(22, 23, 24,.9);
-  border-left-color: rgba(22, 23, 24,.6);
-  border-right-color: rgba(22, 23, 24,.8);
-  border-top-color: rgba(22, 23, 24,.4);
+  border-bottom-color: rgba(22, 23, 24, .9);
+  border-left-color: rgba(22, 23, 24, .6);
+  border-right-color: rgba(22, 23, 24, .8);
+  border-top-color: rgba(22, 23, 24, .4);
   /* border-bottom-color: #212529;
   border-left-color: rgba(22, 23, 24,1);
   border-right-color: #41464b;
@@ -110,6 +113,7 @@ b, strong {
   text-shadow: 0rem 0.2rem 1rem currentColor;
   z-index: -1;
 }
+
 .frame * {
   cursor: none !important;
   font-weight: normal;
@@ -119,36 +123,35 @@ b, strong {
   0% {
     opacity: 0.9;
   }
+
   50% {
     opacity: 1;
   }
 }
+
 @keyframes crt-output {
   0% {
     opacity: 0.9;
   }
+
   50% {
     opacity: 1;
   }
 }
 
 .scanlines {
-  background: -webkit-gradient(
-    linear,
-    left top,
-    left bottom,
-    from(rgba(255, 255, 255, 0)),
-    color-stop(50%, rgba(255, 255, 255, 0)),
-    color-stop(70%, rgba(0, 0, 0, 0.2)),
-    to(rgba(0, 0, 0, 0.6))
-  );
-  background: linear-gradient(
-    to bottom,
-    rgba(255, 255, 255, 0),
-    rgba(255, 255, 255, 0) 50%,
-    rgba(0, 0, 0, 0.2) 70%,
-    rgba(0, 0, 0, 0.6)
-  );
+  background: -webkit-gradient(linear,
+      left top,
+      left bottom,
+      from(rgba(255, 255, 255, 0)),
+      color-stop(50%, rgba(255, 255, 255, 0)),
+      color-stop(70%, rgba(0, 0, 0, 0.2)),
+      to(rgba(0, 0, 0, 0.6)));
+  background: linear-gradient(to bottom,
+      rgba(255, 255, 255, 0),
+      rgba(255, 255, 255, 0) 50%,
+      rgba(0, 0, 0, 0.2) 70%,
+      rgba(0, 0, 0, 0.6));
   background-size: 100% 0.5rem;
   border-radius: 30px;
   position: absolute;
@@ -158,31 +161,33 @@ b, strong {
 .glow {
   -webkit-animation: crt-glow 60s infinite;
   animation: crt-glow 60s infinite;
-  background: radial-gradient(
-    circle at center,
-    rgb(var(--main)) 0%,
-    rgba(var(--alt), 0.78) 58%,
-    rgba(var(--alt), 0.55) 80%,
-    rgba(var(--alt), 0.27) 93%,
-    rgba(var(--alt), 0) 100%
-  );
+  background: radial-gradient(circle at center,
+      rgb(var(--main)) 0%,
+      rgba(var(--alt), 0.78) 58%,
+      rgba(var(--alt), 0.55) 80%,
+      rgba(var(--alt), 0.27) 93%,
+      rgba(var(--alt), 0) 100%);
   opacity: 0.15;
   pointer-events: none;
   position: fixed;
   z-index: 2;
 }
+
 @-webkit-keyframes crt-glow {
   0% {
     opacity: 0.1;
   }
+
   50% {
     opacity: 0.2;
   }
 }
+
 @keyframes crt-glow {
   0% {
     opacity: 0.1;
   }
+
   50% {
     opacity: 0.2;
   }
@@ -203,19 +208,18 @@ b, strong {
   content: "";
   width: 2px;
   height: 100%;
-  background: linear-gradient(
-    to bottom,
-    rgb(var(--main)) 0%,
-    rgba(0, 0, 0, 0) 35%,
-    rgba(0, 0, 0, 0) 65%,
-    rgb(var(--main)) 100%
-  );
+  background: linear-gradient(to bottom,
+      rgb(var(--main)) 0%,
+      rgba(0, 0, 0, 0) 35%,
+      rgba(0, 0, 0, 0) 65%,
+      rgb(var(--main)) 100%);
   top: 0;
 }
 
 .pipboy::before {
   left: 0;
 }
+
 .pipboy::after {
   right: 0;
 }
@@ -252,10 +256,9 @@ b, strong {
   width: max-content;
   max-width: 100%;
   text-align: right;
-  background: linear-gradient(
-    to bottom,
-    var(--black) 0%,
-    rgba(0, 0, 0, 0) 100%);
+  background: linear-gradient(to bottom,
+      var(--black) 0%,
+      rgba(0, 0, 0, 0) 100%);
   z-index: 1;
 }
 
@@ -266,6 +269,7 @@ b, strong {
   min-width: 120px;
   position: relative;
 }
+
 .pip-head li::before {
   content: "";
   position: absolute;
@@ -275,6 +279,7 @@ b, strong {
   top: -2px;
   left: -10px;
 }
+
 .pip-head li::after {
   content: "";
   position: absolute;
@@ -282,11 +287,9 @@ b, strong {
   top: 0;
   height: 100%;
   width: 2px;
-  background: linear-gradient(
-    to bottom,
-    rgb(var(--main)) 0%,
-    rgba(0, 0, 0, 0) 100%
-  );
+  background: linear-gradient(to bottom,
+      rgb(var(--main)) 0%,
+      rgba(0, 0, 0, 0) 100%);
 }
 
 .pip-head li b {
@@ -305,7 +308,7 @@ b, strong {
   list-style: none;
 }
 
-.pipboy > .tab-content {
+.pipboy>.tab-content {
   line-height: 1.2em;
   overflow-y: hidden;
   overflow-x: hidden;
@@ -314,13 +317,14 @@ b, strong {
   padding-right: 1px;
 }
 
-.pipboy > .tab-content > .tab-pane {
+.pipboy>.tab-content>.tab-pane {
   padding-left: 30px;
   height: 100%;
   overflow-y: auto;
 }
 
-#items, #stats {
+#items,
+#stats {
   margin-top: 15px;
 }
 
@@ -341,7 +345,7 @@ label {
   display: block;
   width: 300px;
   max-width: 32%;
-  position: fixed; 
+  position: fixed;
 }
 
 .colors {
@@ -368,7 +372,8 @@ label {
   top: 0;
 }
 
-.options label, .options a {
+.options label,
+.options a {
   display: block;
   padding: 5px 5px 5px 25px;
   margin: 5px 0 0 -25px;
@@ -381,18 +386,20 @@ label {
   outline: 0px solid transparent;
 }
 
-.frame label:hover, .options a:hover,
+.frame label:hover,
+.options a:hover,
 .frame label:focus {
   outline: 2px solid currentColor;
   background: rgba(var(--alt), 0.25);
 }
 
-.colors input:checked + label {
+.colors input:checked+label {
   color: var(--black);
   background: rgb(var(--main), 0.8);
 }
 
-.options label::before, .options a::before {
+.options label::before,
+.options a::before {
   content: "";
   position: absolute;
   width: 10px;
@@ -402,11 +409,13 @@ label {
   outline: 1.5px solid transparent;
 }
 
-.options label:hover::before, .options a:hover::before {
+.options label:hover::before,
+.options a:hover::before {
   outline-color: currentColor;
 }
 
-.options input:checked + label::before, .options .active a::before {
+.options input:checked+label::before,
+.options .active a::before {
   background: currentColor;
   outline-color: currentColor;
 }
@@ -435,6 +444,7 @@ label {
   position: relative;
   line-height: 25px;
 }
+
 .pip-foot a::after {
   content: "";
   position: absolute;
@@ -463,6 +473,7 @@ a.active,
 li.active a {
   outline: 2px solid currentColor;
 }
+
 a:hover {
   background: rgba(var(--alt), 0.25);
 }
@@ -489,8 +500,8 @@ a:hover {
   padding-right: 10px;
 }
 
-.underlined-title{
-  border-bottom: 2px solid rgba(var(--main),0.25);
+.underlined-title {
+  border-bottom: 2px solid rgba(var(--main), 0.25);
   margin: 10px 0 0 0;
   padding-bottom: 10px;
   text-transform: uppercase;
@@ -499,7 +510,7 @@ a:hover {
 
 .stats-page li {
   padding: 10px 0;
-  border-bottom: 2px solid rgba(var(--main),0.25);
+  border-bottom: 2px solid rgba(var(--main), 0.25);
 }
 
 .stats-page .right-options {
@@ -515,6 +526,7 @@ a:hover {
   padding-right: 1px;
   max-width: 33%;
   white-space: nowrap;
+  padding-top: 12px;
 }
 
 #items .right-options {
@@ -555,9 +567,12 @@ a:hover {
 }
 
 .info {
+
   width: 60%;
-  float: right;
   padding-top: 10px;
+  position: absolute;
+  right: 0;
+  z-index: -1;
 }
 
 .info-table {
@@ -592,7 +607,7 @@ a:hover {
 
 .condition {
   display: block;
-  background: rgba(var(--alt),0.25);
+  background: rgba(var(--alt), 0.25);
   float: right;
   height: 1em;
   width: 70px;
@@ -600,6 +615,7 @@ a:hover {
   margin: 2px 2px 0 -5px;
   position: relative;
 }
+
 .condition .fill {
   display: block;
   position: absolute;
@@ -616,13 +632,11 @@ a:hover {
   height: 100%;
   top: 0;
   width: 2px;
-  background: linear-gradient(
-    to bottom,
-    var(--black) 0%,
-    rgba(0, 0, 0, 0) 40%,
-    rgba(0, 0, 0, 0) 60%,
-    var(--black) 100%
-  );
+  background: linear-gradient(to bottom,
+      var(--black) 0%,
+      rgba(0, 0, 0, 0) 40%,
+      rgba(0, 0, 0, 0) 60%,
+      var(--black) 100%);
 }
 
 .extra {
@@ -649,16 +663,15 @@ a:hover {
   top: 0;
   height: 100%;
   width: 2px;
-  background: linear-gradient(
-    to bottom,
-    rgb(var(--main)) 0%,
-    rgba(0, 0, 0, 0) 100%
-  );
+  background: linear-gradient(to bottom,
+      rgb(var(--main)) 0%,
+      rgba(0, 0, 0, 0) 100%);
 }
 
 .info-table .vboy-wrap {
   border: none;
 }
+
 .info-table .vboy-wrap::after {
   display: none;
 }
@@ -757,27 +770,38 @@ a:hover {
   padding: 0 10px;
 }
 
+.gamePlayControls {
+  position: absolute;
+  right: 0;
+  margin-right: 60px;
+}
+
 @keyframes fade-swap {
   0% {
     opacity: 0;
     color: rgb(var(--alt));
   }
+
   20% {
     opacity: 0;
     color: rgb(var(--alt));
   }
+
   30% {
     opacity: 1;
     color: rgb(var(--main));
   }
+
   65% {
     opacity: 1;
     color: rgb(var(--main));
   }
+
   75% {
     opacity: 0;
     color: rgb(var(--alt));
   }
+
   100% {
     opacity: 0;
     color: rgb(var(--alt));
@@ -791,23 +815,26 @@ a:hover {
     max-height: unset;
     border: none;
   }
-  
+
   .output {
     padding: 25px 15px 30px 15px;
   }
-  
+
   .pipboy {
     padding-bottom: 20px;
   }
-  
-  #items, #stats {
+
+  #items,
+  #stats {
     margin-top: 55px;
     padding-top: 15px;
   }
+
   .pip-head {
     width: 100%;
     background: transparent;
-  } 
+  }
+
   .pip-head li {
     width: calc(50% - 10px);
     border-top: 2px solid;
@@ -815,17 +842,21 @@ a:hover {
     margin-top: -2px;
     padding-top: 10px;
   }
+
   .pip-head li:not(:nth-of-type(2))::before {
     display: none;
   }
+
   .pip-body .options {
     width: 100%;
     max-width: unset;
     position: relative;
   }
+
   .pip-body {
     position: relative;
   }
+
   .pip-body .info {
     width: calc(100% + 30px);
     margin-left: -30px;
@@ -835,6 +866,7 @@ a:hover {
     float: none;
     height: 100%;
   }
+
   .pip-body .info::after,
   .pip-head::after {
     content: "";
@@ -843,29 +875,28 @@ a:hover {
     top: 0;
     height: 2px;
     width: 100%;
-    background: linear-gradient(
-      to right,
-      rgba(0, 0, 0, 0) 0%,
-      rgb(var(--main)) 35%,
-      rgb(var(--main)) 65%,
-      rgba(0, 0, 0, 0) 100%
-    );
+    background: linear-gradient(to right,
+        rgba(0, 0, 0, 0) 0%,
+        rgb(var(--main)) 35%,
+        rgb(var(--main)) 65%,
+        rgba(0, 0, 0, 0) 100%);
   }
-  
-  .options label, .options a {
+
+  .options label,
+  .options a {
     width: calc(100% + 24px);
     max-width: unset;
   }
-  
+
   .pip-head::after {
     top: unset;
     bottom: 5px;
   }
-  
+
   .stats-page {
     padding: 0;
   }
-  
+
   .post {
     padding: 10px;
   }
@@ -885,9 +916,11 @@ a:hover {
     overflow: hidden;
     font-size: 0.85em;
   }
+
   .pip-foot a::after {
     bottom: 16px;
   }
+
   .cursor.cursor-active::before {
     background-image: url("https://res.cloudinary.com/kibibyte/image/upload/v1656953740/nv-cursor_ha9i6j.png");
     -webkit-filter: brightness(1);
@@ -896,53 +929,58 @@ a:hover {
 }
 
 html.amber {
-  --main: 255,170,60;
-  --alt: 120,75,20;
+  --main: 255, 170, 60;
+  --alt: 120, 75, 20;
 }
 
 .white .filter,
 .white .cursor {
   filter: saturate(0) brightness(1.15);
 }
-html.white { 
-  --main: 245,245,245;
-  --alt: 130,130,130;
+
+html.white {
+  --main: 245, 245, 245;
+  --alt: 130, 130, 130;
 }
 
 .red .filter,
 .red .cursor {
   filter: sepia(1) saturate(7) brightness(0.65) hue-rotate(-35deg);
 }
-html.red { 
-  --main: 255,40,0;
-  --alt: 160,20,0;
+
+html.red {
+  --main: 255, 40, 0;
+  --alt: 160, 20, 0;
 }
 
 .green .filter,
 .green .cursor {
   filter: sepia(1) saturate(5) brightness(0.85) hue-rotate(65deg);
 }
-html.green { 
-  --main: 0,230,50;
-  --alt: 0,160,30;
+
+html.green {
+  --main: 0, 230, 50;
+  --alt: 0, 160, 30;
 }
 
 .blue .filter,
 .blue .cursor {
-  filter: sepia(1) saturate(5) hue-rotate(165deg); 
+  filter: sepia(1) saturate(5) hue-rotate(165deg);
 }
-html.blue { 
-  --main: 50,150,255;
-  --alt: 20,80,160;
+
+html.blue {
+  --main: 50, 150, 255;
+  --alt: 20, 80, 160;
 }
 
 .black .filter,
 .black .cursor {
-  filter: sepia(1) invert(1); 
+  filter: sepia(1) invert(1);
 }
-html.black { 
-  --main: 200,220,250;
-  --alt: 90,100,150;
+
+html.black {
+  --main: 200, 220, 250;
+  --alt: 90, 100, 150;
 }
 
 .piece::before,
@@ -982,11 +1020,12 @@ html.black {
 
 @media only screen and (min-width: 1310px) {
   .black .piece::before {
-  background-size: 1300px auto;
+    background-size: 1300px auto;
   }
 }
 
 @media only screen and (max-width: 767px) {
+
   .piece::before,
   .piece::after {
     top: 0;
@@ -994,13 +1033,15 @@ html.black {
     width: 0;
     height: 100%;
   }
+
   .black .piece::before {
-  background-size: cover;
+    background-size: cover;
     width: 100%;
     left: 0;
   }
+
   .black .piece::after {
-  background-size: cover;
+    background-size: cover;
     width: 100%;
     left: 0;
   }
