--- a/src/style/index.css
+++ b/src/style/index.css
@@ -1,5 +1,3 @@
-@import url("https://fonts.googleapis.com/css2?family=Roboto+Mono:ital@0;1&display=swap");
-
 * {
   -moz-box-sizing: border-box;
   -webkit-box-sizing: border-box;
@@ -1049,7 +1047,7 @@ html.black {
 
 
 
-/*!
+/*
  * "Fork me on GitHub" CSS ribbon v0.2.3 | MIT License
  * https://github.com/simonwhitaker/github-fork-ribbon-css
 */
@@ -1165,5 +1163,3 @@ html.black {
   -o-transform: rotate(-45deg);
   transform: rotate(-45deg)
 }
-
-/*# sourceMappingURL=gh-fork-ribbon.min.css.map */
